--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "anthom_game_he",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack --mode production"
   },
   "keywords": [],
   "author": "",
